Update print statement to 'Goodbye World'

--- a/graphics.html
+++ b/graphics.html
@@ -259,7 +259,7 @@
             </div>
 
             <!--bean banner-->
-            <div class="loose-card" data-category="ban"><img src="gif/Bean-Scene-Banner.gif" alt="Brand Identity-banner" class="zoomable" onclick="openLightbox(this)">
+            <div class="loose-card" data-category="ban"><img src="gif/Bean-Scene-banner.gif" alt="Brand Identity-banner" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
                 <p class="loose-description">A banner I created for my Portfolio for one of my Project pages</p>
                     <div class="loose-tags">
@@ -329,4 +329,5 @@
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
