Update print statement from 'Hello' to 'Goodbye'

--- a/graphics.html
+++ b/graphics.html
@@ -258,6 +258,19 @@
                 </div>
             </div>
 
+            <!--Mancave-->
+            <div class="loose-card" data-category="mo"><video src="videos/storytelling.mp4" controls></video>
+                <div class="loose-content">
+                    <p class="loose-description">A YouTube video showcasing narrative-driven content creation and editing techniques</p>
+                    <div class="loose-tags">
+                        <span class="tag">Video Editing</span>
+                        <span class="tag">Storytelling</span>
+                        <span class="tag">Capcut</span>
+                        <span class="tag">2023</span>
+                    </div>
+                </div>
+            </div>
+
             <!--bean banner-->
             <div class="loose-card" data-category="ban"><img src="gif/Bean-Scene-banner.gif" alt="Brand Identity-banner" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
@@ -331,3 +344,4 @@
 </body>
 
 </html>
+
