--- a/graphics.html
+++ b/graphics.html
@@ -258,18 +258,18 @@
                 </div>
             </div>
 
-            <!--Mancave-->
-            <div class="loose-card" data-category="mo"><video src="videos/storytelling.mp4" controls></video>
+            <!--MANCAVE-->
+            <div class="loose-card" data-category="mo"><video src="videos/mancave.mp4" controls></video>
                 <div class="loose-content">
-                    <p class="loose-description">A YouTube video showcasing narrative-driven content creation and editing techniques</p>
+                    <p class="loose-description">Images compiled to motion</p>
                     <div class="loose-tags">
                         <span class="tag">Video Editing</span>
-                        <span class="tag">Storytelling</span>
-                        <span class="tag">Capcut</span>
+                        <span class="tag">CapCut</span>
                         <span class="tag">2023</span>
                     </div>
                 </div>
             </div>
+
 
             <!--bean banner-->
             <div class="loose-card" data-category="ban"><img src="gif/Bean-Scene-banner.gif" alt="Brand Identity-banner" class="zoomable" onclick="openLightbox(this)">
@@ -344,4 +344,5 @@
 </body>
 
 </html>
+
 
