--- a/graphics.html
+++ b/graphics.html
@@ -70,6 +70,19 @@
         </p>
         <div class="loose-grid">
 
+            <!--Echo Drfit-->
+            <div class="loose-card" data-category="design"><img src="images/Echo-Drift-Final.jpg" alt="Indie Album Cover" class="zoomable" onclick="openLightbox(this)">
+                <div class="loose-content">
+                    <h3 class="loose-title">Album Cover</h3>
+                    <p class="loose-description">Dreamy space-themed album cover for a fictional indie band called Soft Comet</p>
+                    <div class="loose-tags">
+                        <span class="tag">Album Cover</span>
+                        <span class="tag">Figma</span>
+                        <span class="tag">2025</span>
+                    </div>
+                </div>
+            </div>
+
             <!--Sims logo-->
             <div class="loose-card" data-category="log">
                 <div class="carousel-container" data-carousel>
@@ -184,6 +197,20 @@
                         <span class="tag">Design</span>
                         <span class="tag">Canva</span>
                         <span class="tag">2022</span>
+                    </div>
+                </div>
+            </div>
+
+            <!--Urban Canvas-->
+            <div class="loose-card" data-category="design"><img src="images/Urban-Canvas-Poster.png" alt="Gritty and graffiti-inspired poster" class="zoomable" onclick="openLightbox(this)">
+                <div class="loose-content">
+                    <h3 class="loose-title">Album Cover</h3>
+                    <p class="loose-description">Gritty and graffiti-inspired poster for a fictional art event</p>
+                    <div class="loose-tags">
+                        <span class="tag">Poster</span>
+                        <span class="tag">Figma</span>
+                        <span class="tag">Canva</span>
+                        <span class="tag">2025</span>
                     </div>
                 </div>
             </div>
@@ -344,5 +371,6 @@
 </body>
 
 </html>
+
 
 
