--- a/graphics.html
+++ b/graphics.html
@@ -204,7 +204,7 @@
             <!--Urban Canvas-->
             <div class="loose-card" data-category="design"><img src="images/Urban-Canvas-Poster.png" alt="Gritty and graffiti-inspired poster" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
-                    <h3 class="loose-title">Album Cover</h3>
+                    <h3 class="loose-title">Event Poster</h3>
                     <p class="loose-description">Gritty and graffiti-inspired poster for a fictional art event</p>
                     <div class="loose-tags">
                         <span class="tag">Poster</span>
@@ -371,6 +371,7 @@
 </body>
 
 </html>
+
 
 
 
