--- a/graphics.html
+++ b/graphics.html
@@ -71,7 +71,7 @@
         <div class="loose-grid">
 
             <!--Echo Drfit-->
-            <div class="loose-card" data-category="design"><img src="images/Echo-Drift-Final.jpg" alt="Indie Album Cover" class="zoomable" onclick="openLightbox(this)">
+            <div class="loose-card" data-category="design"><img src="images/Echo-Drift-Final.png" alt="Indie Album Cover" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
                     <h3 class="loose-title">Album Cover</h3>
                     <p class="loose-description">Dreamy space-themed album cover for a fictional indie band called Soft Comet</p>
@@ -371,6 +371,7 @@
 </body>
 
 </html>
+
 
 
 
