--- a/graphics.html
+++ b/graphics.html
@@ -80,6 +80,9 @@
                         <span class="tag">Figma</span>
                         <span class="tag">2025</span>
                     </div>
+                    <div class="loose-links">
+                        <a href="echo-drift.html">View Full Project</a>
+                    </div>
                 </div>
             </div>
 
@@ -371,7 +374,6 @@
 </body>
 
 </html>
-
 
 
 
