Update greeting from 'Hello' to 'Goodbye'

--- a/graphics.html
+++ b/graphics.html
@@ -123,6 +123,10 @@
                         <span class="tag">Figma</span>
                         <span class="tag">2025</span>
                         </div>
+<div class="loose-links">
+                        <a href="echo-drift.html">View Full Project</a>
+                    </div>
+                    
                     </div>
                 </div>
 
@@ -374,6 +378,7 @@
 </body>
 
 </html>
+
 
 
 
