Fix HTML entity encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </p>
                 <p>
                     I am seeking for opportunities in environments that value versatility and creative problem-solving; whether that's working on multiple client projects or
-                    building diverse products throughout the week. I am not looking to do the same thing every day; I'm looking to grow through constant exploration and challenges.
+                    building diverse products throughout the week. I am not looking to do the same thing every day; I'm looking to grow through constant exploration and challenges
                 </p>
             </div>
         </div>
@@ -212,4 +212,5 @@
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
