--- a/graphics.html
+++ b/graphics.html
@@ -71,7 +71,7 @@
         <div class="loose-grid">
 
             <!--Echo Drfit-->
-            <div class="loose-card" data-category="design"><img src="images/Echo-Drift-Final.jpg" alt="Indie Album Cover" class="zoomable" onclick="openLightbox(this)">
+            <div class="loose-card" data-category="design"><img src="images/Echo-Drift-Final.png" alt="Indie Album Cover" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
                     <h3 class="loose-title">Album Cover</h3>
                     <p class="loose-description">Dreamy space-themed album cover for a fictional indie band called Soft Comet</p>
@@ -79,6 +79,9 @@
                         <span class="tag">Album Cover</span>
                         <span class="tag">Figma</span>
                         <span class="tag">2025</span>
+                    </div>
+                    <div class="loose-links">
+                        <a href="echo-drift.html">View Full Project</a>
                     </div>
                 </div>
             </div>
@@ -202,7 +205,7 @@
             </div>
 
             <!--Urban Canvas-->
-            <div class="loose-card" data-category="design"><img src="images/Urban-Canvas-Poster.png" alt="Gritty and graffiti-inspired poster" class="zoomable" onclick="openLightbox(this)">
+            <div class="loose-card" ><img src="images/Urban-Canvas-Poster.png" alt="Gritty and graffiti-inspired poster" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
                     <h3 class="loose-title">Event Poster</h3>
                     <p class="loose-description">Gritty and graffiti-inspired poster for a fictional art event</p>
@@ -297,6 +300,7 @@
                 </div>
             </div>
 
+
             <!--bean banner-->
             <div class="loose-card" data-category="ban"><img src="gif/Bean-Scene-banner.gif" alt="Brand Identity-banner" class="zoomable" onclick="openLightbox(this)">
                 <div class="loose-content">
@@ -368,4 +372,10 @@
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
+
+
+
+
+
